# airscand

./: .gitignore  .gitmessage  AGENTS.md  LICENSE  README.md  main.py  mkdocs.yaml  pyproject.toml
.cursor/rules/: documentation.mdc
.cursor/rules/code/: python.mdc
.cursor/rules/git/: conventional-commits.mdc
.githooks/: commit-msg
.github/workflows/: docs.yaml  quality.yaml  validate.yaml
app/: config.py  destinations.py  discovery.py  http_server.py  logging.py  mtom.py  scan_receiver.py  scan_storage.py  scanner_status_coordination.py  ws_eventing_client.py  ws_scan.py
app/quirks/: __init__.py  epson.py
app/soap/: __init__.py  addressing.py  envelope.py  fault.py  namespaces.py  transport.py  xmlutil.py
app/soap/builders/: __init__.py  eventing.py  faults.py
app/soap/parsers/: __init__.py  capabilities.py  discovery.py  eventing.py  scan.py  transfer.py
docs/: ROADMAP.md  _footer.md  architecture.md  configuration.md  design.md  development.md  getting-started.md  index.md  references.md  status.md  terms.md  troubleshooting.md  wia_client_audit.md  ws-eventing_audit.md  ws-scan_audit.md
docs/protocol/: eSCL.md  vendor_quirks.md  wia_client_spec.md  ws-scan-tcp.md
tests/: __init__.py  test_capabilities.py  test_config.py  test_destinations.py  test_discovery.py  test_logging.py  test_main_registration.py  test_mtom.py  test_quirks.py  test_scan_receiver.py  test_scanner_status_coordination.py  test_soap_xmlutil.py  test_ws_eventing_client.py  test_ws_scan.py
